--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
       </div>
     <!--MAIN PART -->
-      <div>
+      <div id="main">
         <h3>Our Process</h3>
         <p><img src="./resources/images/identify.svg" /></p>
         <h4>Identity</h4>
@@ -33,9 +33,6 @@
         <h4>Execute</h4>
         <h6>We put everything we have into our work.</h6>
         <h4 id="newyorkdesign">Designed in New York</h4>
-      </div>
-    <!--Footer -->
-      <div>
         <h4>Portforlio</h4>
         <h6>Coming soon</h6>
         <h4>Team</h4>
@@ -44,14 +41,16 @@
         <h6>Phone: (555)-555-5555<h6>
         <h6>Email: test@example.com<h6>
         <h6>Twitter: @test<h6>
-        <p id="copyright">&copy; Broadway 2016</p>
-        <nav>
+      </div>
+    <!--Footer -->
+      <div id="footer">
+        <p id="copyright"><span>&copy; Broadway 2016</span>
           <a href="#">Home</a>
           <a href="#">Process</a>
           <a href="#">Work</a>
           <a href="#">Team</a>
           <a href="#">Contact</a>
-        </nav>
+        </p>
       </div>
   </body>
 </html>
